--- a/demo/src/main/resources/templates/join_new.html
+++ b/demo/src/main/resources/templates/join_new.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>블로그 게시판(new)</title>
+<title>회원가입(new)</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
